--- a/sass/common/_style.scss
+++ b/sass/common/_style.scss
@@ -73,7 +73,7 @@ html {
 }
 
 body {
-  font-family: var(--font-family);
+  font-family: var(--font-family) !important;
   overflow-x: hidden;
   color: #303239;
   cursor: default;
